--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
                 <div id="Tasks">
 
-                    <div class="task">
+                   <!--<div class="task">
                         <div class="content">
                             <input
                                 type="text"
@@ -44,7 +44,7 @@
                             <button class="edit">Edit</button>
                             <button class="delete">Delete</button>
                         </div>
-                    </div>
+                    </div> -->
                 </div>  
 
             </section>
